[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spyke"
version = "0.0.1"
requires-python = ">=3.12"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Marek `m4reQ` Mizerski" }
]
description = "Python OpenGL-based game engine"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed"
]
dependencies = [
    "PyOgg",
    "PyOpenAL",
    "numpy",
    "colorama",
    "Pillow",
    "pydub",
    "freetype-py",
    "psutil",
    "pygl @ git+https://github.com/m4reQ/pygl@private_0.0.1"
]

[project.urls]
home = "https://github.com/m4reQ/spyke"

# setuptools is dumb enough to not be able to provide support for substituting packages
# discovered by find_packages with a corresponding package-dir
# guess who is fully developed matured language without proper support for packaging :)

[tool.setuptools]
package-dir = {spyke = "src_py"}
packages = [
    "spyke",
    "spyke.assets",
    "spyke.assets.loaders",
    "spyke.assets.types",
    "spyke.audio",
    "spyke.debug",
    "spyke.ecs",
    "spyke.ecs.components",
    "spyke.enums",
    "spyke.graphics"]
include-package-data = true
data-files = {"spyke/shader_sources" = ["src_py/shader_sources/*.frag", "src_py/shader_sources/*.vert"]}
